Fix outcome not being visible

--- a/src/data/common.css
+++ b/src/data/common.css
@@ -277,6 +277,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    color: var(--feature-foreground);
 }
 
 .outcome span {
